# fast-mime

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
fast_mime/: __init__.py
fast_mime/data/: patch.json
tests/: test_mime.py
